# whisper_test

./: .gitignore  Cargo.toml  Info.plist  ascii_gif_frames.json  build.rs  environment.yml  main.py
benches/: channel_benchmark.rs
src/: error.rs  main.rs
