

[package]
name = "whisper_test"
version = "0.1.0"
edition = "2021"
authors = ["Lyndon <lyndon@lyndon.dev>"]

[dependencies]
cargo-bundle = "0.6.1"
cpal = "0.15.3"
crossterm = "0.28.1"
kanal = "0.1.0-pre8"
plotters = "0.3.7"
rustfft = "6.2.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
termion = "4.0.3"
textplots = "0.8.6"
tui = "0.19.0"

[package.metadata.bundle]
name = "Whisper Test"
identifier = "com.example.whispertest"
version = "0.1.0"
resources = ["Info.plist"]

[package.metadata.bundle.macos]
info_plist = "Info.plist"


[profile.release]
opt-level = 3
